// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Settings, student enrollment link renders with disabled url for preview course 1`] = `
<span
  className="tour-anchor enrollment-code-link"
  data-tour-anchor-id="enrollment-code-link"
  id="enrollment-code-link"
  onClick={undefined}
>
  <span
    className="title"
  >
    Student Enrollment URL:
  </span>
  <span
    className="faux-disabled-input"
  >
    No enrollment URL in preview.
  </span>
</span>
`;

exports[`Course Settings, student enrollment link renders with url 1`] = `
<span
  className="tour-anchor enrollment-code-link"
  data-tour-anchor-id="enrollment-code-link"
  id="enrollment-code-link"
  onClick={undefined}
>
  <span
    className="title"
  >
    Student Enrollment URL:
  </span>
  <input
    className="copy-on-focus"
    onFocus={[Function]}
    readOnly={true}
    value="123456"
  />
</span>
`;
